# rocket_cors

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  aliases.js  build.rs  index.html  rust-toolchain  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
examples/: fairing.rs  guard.rs  json.rs  manual.rs  mix.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/str/: trait.FromStr.js
implementors/rocket/fairing/: trait.Fairing.js
implementors/rocket/request/from_request/: trait.FromRequest.js
implementors/rocket/response/responder/: trait.Responder.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
rocket_cors/: all.html  enum.AllOrSome.html  enum.Error.html  fn.catch_all_options_routes.html  index.html  sidebar-items.js  struct.Cors.html  struct.CorsOptions.html  struct.Guard.html  struct.ManualResponder.html  struct.Method.html  struct.Origins.html  struct.Responder.html  type.AllowedHeaders.html  type.AllowedMethods.html  type.AllowedOrigins.html
rocket_cors/headers/: enum.Origin.html  index.html  sidebar-items.js  struct.AccessControlRequestHeaders.html  struct.AccessControlRequestMethod.html  struct.HeaderFieldName.html  type.HeaderFieldNamesSet.html
src/: fairing.rs  headers.rs  lib.rs  test_macros.rs
src/rocket_cors/: fairing.rs.html  headers.rs.html  lib.rs.html
tests/: ad_hoc.rs  fairing.rs  fairings.rs  guard.rs  headers.rs  manual.rs  mix.rs  routes.rs
