[package]
name = "rocket_cors"
version = "0.6.0"
license = "MIT/Apache-2.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]
description = "Cross-origin resource sharing (CORS) for Rocket.rs applications"
homepage = "https://github.com/lawliet89/rocket_cors"
repository = "https://github.com/lawliet89/rocket_cors"
documentation = "https://docs.rs/rocket_cors/"
keywords = ["rocket", "cors"]
categories = ["web-programming"]
edition = "2021"
rust-version = "1.69"

[features]
default = ["serialization"]

# Serialization and deserialization support for settings
serialization = ["serde", "serde_derive", "unicase_serde"]

[dependencies]
regex = "1.7.2"
rocket = { version = "0.5.0", default-features = false }
log = "0.4"
unicase = "2.6"
url = "2.3.1"
http = "0.2"

# Optional dependencies that are activated by the various features
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
unicase_serde = { version = "0.1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0"

[[example]]
name = "fairing"

[[example]]
name = "guard"

[[example]]
name = "json"
required-features = ["serialization"]

[[example]]
name = "manual"

[[example]]
name = "mix"

[package.metadata.docs.rs]
all-features = true
